[gd_scene load_steps=6 format=3 uid="uid://d3o8e8ctimxns"]

[ext_resource type="Script" path="res://addons/fire_droid_core/scenes/defaults/default_loading_screen.gd" id="1_fb0b3"]

[sub_resource type="Gradient" id="Gradient_6uef6"]
interpolation_mode = 1
offsets = PackedFloat32Array(0, 0.497908, 0.656904)
colors = PackedColorArray(0, 0, 0, 0, 0.0748091, 0.0899707, 0.111197, 1, 0, 0, 0, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_ag2j2"]
gradient = SubResource("Gradient_6uef6")
width = 256
height = 256
fill = 1
fill_from = Vector2(0.5, 0.5)

[sub_resource type="Gradient" id="Gradient_er481"]
interpolation_mode = 1
offsets = PackedFloat32Array(0, 0.497908, 0.656904)
colors = PackedColorArray(0, 0, 0, 0, 0.439216, 0.729412, 0.980392, 1, 0, 0, 0, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_hx022"]
gradient = SubResource("Gradient_er481")
width = 256
height = 256
fill = 1
fill_from = Vector2(0.5, 0.5)

[node name="DefaultLoadingScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_fb0b3")
ending_delay = 1.0

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2
alignment = 1

[node name="LabelLoading" type="Label" parent="PanelContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Loading..."
horizontal_alignment = 1

[node name="CenterContainer" type="CenterContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="TextureProgressBar" type="TextureProgressBar" parent="PanelContainer/VBoxContainer/CenterContainer"]
unique_name_in_owner = true
layout_mode = 2
fill_mode = 4
texture_under = SubResource("GradientTexture2D_ag2j2")
texture_progress = SubResource("GradientTexture2D_hx022")

[node name="LabelProgress" type="Label" parent="PanelContainer/VBoxContainer/CenterContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "0%"

[node name="Timer" type="Timer" parent="."]
wait_time = 0.3
autostart = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
